# bookstore

./: Dockerfile  README.md  db.sqlite3  delete_test_db.py  docker-compose.yml  env.dev  pyproject.toml  sshkey  sshkey.pub
.github/workflows/: build.yml  render.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/models/: test_order.py
order/tests/test_viewsets/: 0test_order_viewset.py  test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: product_serializer.py
product/tests/models/: test_category.py  test_products.py
product/tests/test_viewsets/: 0test_product_viewset.py  test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
