[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["DiegoSanchez <diegosmtattoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
django = "^5.1.6"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
django-debug-toolbar = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
factory-boy = "^3.2.0"
pytest-django = "^4.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
start = "bookstore.manage:main"